--- a/guesstimate/public/index.html
+++ b/guesstimate/public/index.html
@@ -17,6 +17,6 @@
     <title>Level up as brand influencer.</title>
   </head>
   <body className="font-siffon">
-    <div id="root"></div>
+    <div id="App" class="container"></div>
   </body>
 </html>
