--- a/guesstimate/public/index.html
+++ b/guesstimate/public/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <style>
-      @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
-      </style>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#f0f0f0" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Level up as brand influencer.</title>
-  </head>
-  <body className="font-siffon">
-    <div id="App" class="container"></div>
-  </body>
+
+<head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Secular+One&display=swap');
+  </style>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#f0f0f0" />
+  <meta name="description" content="In Cast" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>Level up as brand influencer.</title>
+</head>
+
+<body className="font-siffon">
+  <div id="App" class="container"></div>
+</body>
+
 </html>
